--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,6 @@ license-file = "LICENSE"
 [dependencies]
 clap = {version="4.5.4", features = ["derive"]}
 clap-stdin = "0.4.0"
+
+serde_json = "1.0.132"
+serde = { version = "1.0", features = ["derive"] }
